# Android_SVO

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: shader.glslv
app/src/main/cpp/: CMakeLists.txt  GLRenderer.cpp  GLRenderer.h  android_main.cpp  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  image_process.cpp  image_process.h  sensor_manager.cpp  sensor_manager.h  svo_system.cpp  svo_system.h
app/src/main/cpp/svo/: atan_camera.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  homography.cpp  initialization.cpp  map.cpp  matcher.cpp  math_utils.cpp  pinhole_camera.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  robust_cost.cpp  sparse_img_align.cpp  vision.cpp
app/src/main/cpp/svo/include/svo/: SE3.h  SO3.h  atan_camera.h  depth_filter.h  feature.h  feature_alignment.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  homography.h  initialization.h  map.h  matcher.h  math_utils.h  nlls_solver.h  pinhole_camera.h  point.h  pose_optimizer.h  reprojector.h  sparse_img_align.h  vision.h
app/src/main/java/com/sample/view/: ViewActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
